# webcodex

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  TODO.md  V2_SCOPE.md  build.rs  go.mod  projects.toml.example
data/: drop.db  openapi.json
data/tmp_images/: chatgpt-private-drop-workflow.html  tmp2.mmd  tmp3.html  tmp4.excalidraw.json
data/uploads/: 0b986a5a-e8ee-4649-aa81-3e6ee159b301.txt
deploy/: agent-project.toml.example  nginx.private-drop.example.conf  nginx.webcodex.example.conf  private-drop-agent.service.example  private-drop-agent.toml.example  private-drop.env.example  private-drop.service.example  webcodex-agent.service.example  webcodex-agent.toml.example  webcodex.env.example  webcodex.service.example
deploy/projects.d/: private-drop.toml.example  webcodex.toml.example
docs/: AGENT_HANDOFF.md  AGENT_PROJECTS.md  AGENT_PROJECTS.zh-CN.md  AGENT_PROTOCOL.md  AGENT_PROTOCOL.zh-CN.md  AGENT_RUNTIME_ARCHITECTURE.md  AGENT_RUNTIME_ARCHITECTURE.zh-CN.md  AGENT_TRANSPORTS.md  AGENT_TRANSPORTS.zh-CN.md  ARCHITECTURE.md  AUDIT_API.md  AUTH_ARCHITECTURE.md  AUTH_MODEL.md  AUTH_MODEL.zh-CN.md  BUILD_INSTALL.md  BUILD_INSTALL.zh-CN.md  CI_LANES.md  CODEX_EXECUTION_ENGINE_REFACTOR_PROMPT.zh-CN.md  CODEX_USAGE.md  CONCEPTS.md  CONCEPTS.zh-CN.md  DEMO.md  DEMO.zh-CN.md  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  DESKTOP_SESSIONS.md  DESKTOP_SESSIONS.zh-CN.md  E2E_VALIDATION.md  E2E_VALIDATION.zh-CN.md  GLM52_DEVELOPMENT_PLAN.md  GPT_ACTIONS.md  GPT_ACTIONS.zh-CN.md  GPT_WORKFLOW.md  HOSTED_CONNECT_FIRST_ITERATION.zh-CN.md  HOSTED_EDIT_RELIABILITY_FIFTH_ITERATION.zh-CN.md  HOSTED_EXECUTION_EFFICIENCY_FOURTH_ITERATION.zh-CN.md  HOSTED_EXECUTION_ENGINE_SEVENTH_ITERATION.zh-CN.md  HOSTED_EXECUTION_ENGINE_SIXTH_ITERATION.zh-CN.md  HOSTED_TASK_KERNEL_SECOND_ITERATION.zh-CN.md  HOSTED_TASK_RESULT_THIRD_ITERATION.zh-CN.md  (+46 more)
docs/agent/: architecture-decisions.md  oauth-bridge-plan.md  openapi-guidelines.md  permission-audit-correlation.md  permission-model.md  release-process.md  session-correlation.md  session-lifecycle.md  session-model.md
docs/architecture/: CODING_RUNTIME_CRATES.md
docs/archive/: HOSTED_CONNECT_FIRST_ITERATION.zh-CN.md  HOSTED_EDIT_RELIABILITY_FIFTH_ITERATION.zh-CN.md  HOSTED_EXECUTION_EFFICIENCY_FOURTH_ITERATION.zh-CN.md  HOSTED_EXECUTION_ENGINE_SEVENTH_ITERATION.zh-CN.md  HOSTED_EXECUTION_ENGINE_SIXTH_ITERATION.zh-CN.md  HOSTED_TASK_KERNEL_SECOND_ITERATION.zh-CN.md  HOSTED_TASK_RESULT_THIRD_ITERATION.zh-CN.md
docs/assets/: README.md  README.zh-CN.md
docs/diagrams/: goal-workflow.excalidraw.json  goal-workflow.html
docs/dogfood/: ROUND_1_2_SUMMARY.md  ROUND_3_MEDIUM_SUMMARY.md
docs/evals/: CODING_LOOP_EVAL.md
examples/: agent-project-create.json  agent-project-workflow-job.json  agent-project-workflow.json  agent-project.private-drop.toml  agent-project.webcodex.toml  agent-shell-job.json  projects.toml.example
frontend/: package-lock.json  package.json  tsconfig.json
frontend/scripts/: build.mjs
frontend/src/: app.ts  console.html  review_state.ts  styles.css
frontend/test/: review_state.test.mjs
npm/webcodex/: README.md  install.js  manifest.example.json  manifest.json  package.json
scripts/: desktop_worker.py  desktop_worker_demo.py  diagnose_tailscale_ssh.sh  e2e_private_drop_agent.py  e2e_shell_client.py  e2e_test.sh  e2e_webcodex_agent.py  e2e_zero_config_ws.sh  eval_coding_loop.sh  mcp_smoke_agent.mjs  npm_package_smoke.sh  pdctl.py  release_check.sh  smoke_artifact_transfer.sh  smoke_deployment.sh  test_inventory.sh
src/: action_audit.rs  action_audit_sessions.rs  action_sessions.rs  admin_cli.rs  agent_init.rs  agent_quic.rs  agent_tokens_http.rs  agent_ws.rs  apply_edits_shared.rs  artifact_policy.rs  audit_http.rs  auth.rs  build_info.rs  codex.rs  config.rs  console_web.rs  db.rs  desktop.rs  host_console_http.rs  hosted_connect.rs  lsp_bridge.rs  main.rs  mcp.rs  models.rs  oauth_http.rs  openapi.rs  pairing_http.rs  project_entry.rs  project_entry_setup.rs  project_entry_tests.rs  project_overview.rs  projects.rs  runtime_http.rs  shell_client.rs  shell_protocol.rs  startup.rs  task_cli.rs  tool_request_trace.rs  tool_runtime.rs  users_http.rs  (+3 more)
src/admin_cli/: commands.rs  output.rs  tests.rs
src/agent_tokens_http/: responses.rs  routes.rs  tests.rs
src/agent_transport/: mod.rs  protocol.rs  registry.rs
src/audit_http/: responses.rs  routes.rs  tests.rs
src/auth/: context.rs  middleware.rs  mod.rs  pat.rs  principal.rs  project_credential.rs  scopes.rs  shared_key.rs  tokens.rs
src/codex/: agent_exec.rs  artifact.rs  capabilities.rs  command_request.rs  command_workflow.rs  context.rs  doctor.rs  edit.rs  git.rs  hooks.rs  jobs.rs  patch.rs  remote_edit.rs  report.rs  security.rs  shell.rs  source.rs  ssh.rs  trusted.rs  types.rs  url_security.rs  workflow.rs
src/connector_runtime/: execution.rs  execution_tests.rs  host_tests.rs  http.rs  mod.rs  surface.rs  workspace.rs
src/db/: accounts.rs  agents.rs  audit.rs  execution_model.rs  executions.rs  oauth.rs  schema.rs  task_kernel.rs
src/mcp/: mod.rs
src/oauth_http/: clients.rs  html.rs  managed_authorize.rs  (+7 more)
(+225 files in other folders)
