[package]
name = "private-drop"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.93", features = ["oapi", "cors", "affix-state", "websocket"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
salvo = { version = "0.93", features = ["test"] }
